# openfactory-sdk

./: .flake8  README.md  pyproject.toml  spindle_monitoring.py
.devcontainer/: devcontainer.json
adapter/: ivac.xml  ivac.yml
app/: Dockerfile  apps.yml  tool_monitoring.py
apps/: Dockerfile  apps.yml  spindle_monitoring.py  tool_monitoring.py  tool_monitoring_local.py  usage_duration.sql
client_app/: app.py  connection_strategy_factory.py  device_connection_manager.py  manisfest.json  openfactory_api.py  openfactory_api_client.py
client_app/static/: index.html
client_app/templates/: analytics.html  dashboard.html  index.html  sidebar.html
dashboard/: app.py  docker-compose.yml  manifest.json  requirements.txt
dashboard/templates/: analytics.html  dashboard.html  index.html  sidebar.html
database_connector/: app.py  database_manager.py  docker-compose.yml  insert_type_strategy_factory.py  message_handler.py  message_router.py  requirements.txt  type_convention.json  websocket_client.py
database_connector/init_db/: build_bd.py  cnc_insert_demo.sql  dust_trak_insert.sql  init_db.sql  ivac_insert_demo.sql  test.sql
openfactory/: uns.yml
openfactory/adapter/: cnc.xml  cnc.yml  dust_trak.yml  ivac.xml  ivac.yml  wtvb01.xml  wtvb01.yml
openfactory/apps/: app_virtual_device.yml  apps.yml
openfactory/devices/: ivac.yml
openfactory_sdk/: __init__.py  sdk_cli.py
openfactory_sdk/adapter/: agent.cfg  ivac.xml  (+1 more)
supervisor/: Dockerfile.opcuasupervisor  __init__.py  base_supervisor.py  docker-compose.yml  opcua_supervisor_package.py  opcuasupervisor.py
(+58 files in other folders)
